@@ -1,3 +1,12 @@
+2008-04-28  Jakub Jelinek  <jakub@redhat.com>
+
+	PR debug/36060
+	* dwarf2out.c (struct die_struct): Mark as chain_circular through
+	die_sub field.
+	* gengtype.c (walk_type, write_func_for_structure): Handle
+	chain_circular.
+	* doc/gty.texi: Document chain_circular.
+
 2008-04-25  Pompapathi V Gadad <Pompapathi.V.Gadad@nsc.com>
 
 	* config.gcc (crx-*-elf): Remove deprecation.
